# volt_rec

./: .gitignore  Makefile  README.md  common.c  common.h  data_fromats.h  file_thread.c  processing_thread.c  processing_thread.h  recorder.c
full_custom/: Makefile  README.md  common.c  common.h  converter.c  data_formats.h  file_thread.c  file_thread.h  plot_voltage_binary.py  processing_thread.c  recorder.c  udp_thread.c  udp_thread.h
half_hashpipe/: .gitignore  Makefile.am  aclocal.m4  actual_init.sh  ata_volt_outer_thread.c  ata_volt_outer_thread.h  recv_init.sh
